Bug 84512 - Background color not shown in Styles-Dropdown
Summary: Background color not shown in Styles-Dropdown
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Juergen Funk
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-30 14:17 UTC by Samuel Mehrbrodt
Modified: 2014-10-04 13:47 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Mehrbrodt 2014-09-30 14:17:00 UTC
When you set a background color for a style, it should appear in the Styles dropdown.

It worked in 4.2 (Regression).
Comment 1 Juergen Funk 2014-10-01 07:54:20 UTC
I will look, now
Comment 2 Juergen Funk 2014-10-02 11:27:21 UTC
Only has implement the Style "Color" the others "gradient, hatching and bitmap" ignore.

gerrit: https://gerrit.libreoffice.org/#/c/11762/