Fix fdo#84512 Background color not shown in Styles-Dropdown

this fix is only when in "Area" set the "Color" the other
"gradient, hatching and bitmap" are not implement

delete needlees code, add comment for the other styles
the second

Change-Id: I5ec31c0105491c6d27835d63648fedff21998926