svx/source/tbxctrls/tbcontrl.cxx
@@ -62,7 +62,6 @@
 #include <svx/xtable.hxx>
 #include <editeng/fontitem.hxx>
 #include <editeng/fhgtitem.hxx>
-#include <editeng/brushitem.hxx>
 #include <editeng/boxitem.hxx>
 #include <editeng/charreliefitem.hxx>
 #include <editeng/contouritem.hxx>
@@ -89,6 +88,10 @@
 #include <editeng/eerdll.hxx>
 #include <editeng/editrids.hrc>
 #include <svx/xlnclit.hxx>
+
+#include <svx/xfillit0.hxx>
+#include <svx/xflclit.hxx>
+
 
 #define MAX_MRU_FONTNAME_ENTRIES    5
 #define LOGICAL_EDIT_HEIGHT         12
@@ -649,41 +652,58 @@ void SvxStyleBox_Impl::UserDraw( const UserDrawEvent& rUDEvt )
 
                 pDevice->SetFont( aFont );
 
-                Color aFontCol, aBackCol;
+                // colors for show of different
+                Color aFontCol = COL_AUTO, aBackCol = COL_AUTO;
+
                 bool  IsNotSelect = rUDEvt.GetItemId() != GetSelectEntryPos();
 
-                // text color
                 pItem = aItemSet.GetItem( SID_ATTR_CHAR_COLOR );
-                if ( NULL != pItem )
+                // text color, when we are not selected
+                if ( (NULL != pItem) && IsNotSelect)
                     aFontCol = Color( static_cast< const SvxColorItem* >( pItem )->GetValue() );
-                else
-                    aFontCol = COL_AUTO;
 
-                // background color
-                pItem = aItemSet.GetItem( SID_ATTR_BRUSH );
-                if ( NULL != pItem )
-                    aBackCol = Color( static_cast< const SvxBrushItem* >( pItem )->GetColor() );
-                else
-                    aBackCol = COL_AUTO;
+                sal_uInt16 style = drawing::FillStyle_NONE;
+                // what for Fill style is selected
+                pItem = aItemSet.GetItem( XATTR_FILLSTYLE );
+                // only when ok and not select
+                if ( (NULL != pItem) && IsNotSelect)
+                    style = static_cast< const XFillStyleItem* >( pItem )->GetValue();
+
+                switch(style)
+                {
+                    // "Style Color"
+                    case drawing::FillStyle_SOLID:
+                    {
+                        // set background color
+                        pItem = aItemSet.GetItem( XATTR_FILLCOLOR );
+                        if ( NULL != pItem )
+                            aBackCol = Color( static_cast< const XFillColorItem* >( pItem )->GetColorValue() );
+
+                        if ( aBackCol != COL_AUTO )
+                        {
+                            pDevice->SetFillColor( aBackCol );
+                            pDevice->DrawRect( rUDEvt.GetRect() );
+                        }
+                    }
+                    break;
+
+                    // the other Styles "gradient, hatching and bitmap" not yet implement, not very important
+
+                    default:
+                    break;
+               }
 
                 // test is the font-, background-color not different, then change the Font-Color
                 if( (aFontCol != COL_AUTO) || (aBackCol != COL_AUTO) )
                     aFontCol = TestColorsVisible(aFontCol, (aBackCol != COL_AUTO) ? aBackCol : pDevice->GetBackground().GetColor());
 
-                // text color, when we are not selected
-                if ( (aFontCol != COL_AUTO) && IsNotSelect )
+                // set text color
+                if ( aFontCol != COL_AUTO )
                     pDevice->SetTextColor( aFontCol );
 
-                // background color
-                if (pItem && IsNotSelect)
+                // handling of the push-button
+                if (IsNotSelect)
                 {
-                    // background color,  when we are not selected
-                    if ( aBackCol != COL_AUTO )
-                    {
-                        pDevice->SetFillColor( aBackCol );
-                        pDevice->DrawRect( rUDEvt.GetRect() );
-                    }
-
                     Rectangle aRect(rUDEvt.GetRect());
                     unsigned int nId = (aRect.getY() / aRect.GetSize().Height());
                     if(nId < MAX_STYLES_ENTRIES && m_pButtons[nId])
